# pyvision

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  release-please-config.json  requirements.txt  setup.cfg  setup.py  sonar-project.properties  sonarqube_cli.ps1  tox.ini
.github/workflows/: lint.yml  release-please.yml  update.yml
EnumerateDevice/: EnumerateDevice.sln  __init__.py
EnumerateDevice/EnumerateDevice/: EnumerateDevice.vcxproj  EnumerateDevice.vcxproj.filters  device.cpp
EnumerateDevice/EnumerateDevice/x64/Debug/: device.ilk  device.pyd.recipe  vc143.idb
EnumerateDevice/EnumerateDevice/x64/Debug/EnumerateDevice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
EnumerateDevice/EnumerateDevice/x64/Debug/device.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  device.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
EnumerateDevice/x64/Debug/: device.exp  device.lib
coco/: .gitignore  README.md  coco.ipynb  coco.names-fr
device_ext/: CMakeLists.txt  device.cpp
src/pyvision/: __init__.py  device.pyi  main.py
src/pyvision/camera/: __init__.py  fps.py  opencv.py
src/pyvision/controllers/: main.py  video.py
src/pyvision/device/: EnumerateDevice.sln  __init__.pyi
src/pyvision/device_ext/: EnumerateDevice.sln  EnumerateDevice.vcxproj  EnumerateDevice.vcxproj.filters  device.cpp
src/pyvision/models/: __init__.py  camera.py  filters.py  opencv_stream.py  processing.py  stream.py  video.py  yolo.py
src/pyvision/ui/: __init__.py  camera_app.py  pygame_frame.py
src/pyvision/utils/: __init__.py  fps.py  observer.py
src/pyvision/views/: camera.py  main.py  pygame.py  root.py  video.py
