[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvision"
dynamic = ["version"]
description = "Pyvision: a framework to detect objects"
dependencies = [
    "looseversion==1.3.0",
    "numpy==2.0.1",
    "opencv-python==4.10.0.84",
    "pre-commit==3.8.0",
    "pylint==3.2.6",
    "pygame==2.6.0",
    "rethinkdb==2.4.10.post1",
    "ruff==0.5.5",
    "six==1.16.0",
    "thinker==1.1.1",
]

[project.scripts]
#pyvision = "pyvision.entrypoint:main"

[tool.hatch.envs.default.scripts]
pyvision = "hatch run python -m pyvision.main"

[tool.hatch.version]
path = "src/pyvision/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/pyvision",
    "EnumerateDevice/EnumerateDevice/device.cpp",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/pyvision",
    "EnumerateDevice/EnumerateDevice/device.cpp",
]

[tool.hatch.metadata]
allow-dynamic-versioning = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["C901", "D", "E4", "E7", "E9", "I", "F"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
